examples/test/testpolicy10833.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10833
  namespace: namespace7
spec:
  podSelector:
    matchLabels:
      key2: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value2
          key18: value8
          key23: value21
      podSelector:
        matchLabels:
          key39: value29
          key9: value16
